--- a/css/contact.css
+++ b/css/contact.css
@@ -47,3 +47,43 @@ i{
     float: right;
     padding: 0px 20px 0px 0px;
 }
+/*---------------------------------------------------------------------------------------*/
+/* Styling inputs with type="text , select elements and textareas*/
+.intro{
+    margin-left: 75px;
+    padding: 10px;
+}
+.form{
+    float: left;
+    size: 50%;
+    margin-left: 75px;
+    border-radius: 10px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
+input[type=text], select, textarea{
+    width: 100%; /* Full width */
+    padding: 12px; /* Some padding */ 
+    border: 1px solid #ccc; /* Gray border */
+    border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 10px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+#message{
+    height: 200px;
+}
+
+.map{
+    float: right;
+    size: 40%;
+    margin-right: 250px;
+    width: 500px;
+    height: 500px;
+    
+}
+.locationMap{
+    text-align: center;
+}
+
